2008-04-08  Richard Hult  <richard@imendio.com>

	* src/*: More style cleanups, make all the rc style definitions
	use the macros. Add copyright information and header guards.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-rc-style.h:
	* src/quartz-style.c:
	* src/quartz-style.h:
	* src/test.c: More style fixes.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-draw.c:
	* src/quartz-style.c: Coding style fixes.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c: (draw_arrow): Fix typo, makes arrowing
	drawing work.

2007-04-07  Alberto Ruiz <aruiz@gnome.org>

	* Initial commit.